# my-template-haskell

./: PKGNAME.cabal  flake.nix
test/: Spec.hs
