cabal-version:   3.8
name:            PKGNAME
version:         0
license:         BSD-3-Clause
build-type:      Simple
license-file:    LICENSE
author:          AUTHNAME
maintainer:      AUTHNAME <EMAIL>
copyright:       CURRENTYEAR AUTHNAME
tested-with:     GHC ==8.6.5 || ==8.8.3 || ==8.10.7 || ==9.0.2 || ==9.2.2
extra-doc-files:
  CHANGELOG.md
  README.md

-- category:
-- description:     description
-- synopsis:        one-line synopsis
-- homepage:        https://github.com/FIXME/PKGNAME#readme
-- source-repository head
--   type:     git
--   location: git://github.com/FIXME/PKGNAME.git

common common-options
  build-depends:    base >=4.9 && <5
  default-language: Haskell2010
  default-extensions:
    ApplicativeDo
    BangPatterns
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DisambiguateRecordFields
    DuplicateRecordFields
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTSyntax
    GeneralisedNewtypeDeriving
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    MonadComprehensions
    MultiParamTypeClasses
    MultiWayIf
    NoImplicitPrelude
    NoStarIsType
    NumericUnderscores
    OverloadedStrings
    PolyKinds
    PostfixOperators
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    StrictData
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -fhide-source-paths -Wpartial-fields

library
  import:          common-options
  hs-source-dirs:  src
  build-depends:
    , containers
    , mtl
    , data-default
    , validity
    , validity-text
    , lens
    , rio
    , transformers
  exposed-modules:
    MyPrelude

executable PKGNAME-exe
  import:         common-options
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:  PKGNAME
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

test-suite PKGNAME-test
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs
  build-depends:
    , genvalidity
    , genvalidity-sydtest
    , rio
    , PKGNAME
    , sydtest
  build-tool-depends: sydtest-discover:sydtest-discover >=0.0.0.3
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

benchmark PKGNAME-bench
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is:        Main.hs
  build-depends:
    , criterion
    , PKGNAME

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
